Updated site title, fixed spacing.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -25,7 +25,7 @@ header {
         & span {
             display: block;
             font-size: 0.4em;
-            line-height: 1;
+            line-height: 1.6;
             text-transform: uppercase;
         }
     }
@@ -81,7 +81,7 @@ div#links {
 
 footer {
     text-align: center;
-    margin-top: 100px;
+    margin-top: 80px;
     & ul {
         list-style-type: none;
     }
